<resources>
    <string name="app_name">SimpleNews</string>
    <string name="name">无名</string>
    <!-- Left Menu-->
    <string name="navigation_news">新闻</string>
    <string name="navigation_images">图片</string>
    <string name="navigation_blog">博客</string>

    <!-- tab bar-->
    <string name="top">精选</string>
    <string name="recreation">娱乐</string>
    <string name="science">科技</string>
    <string name="health">健康</string>
    <string name="sport">体育</string>
    <string name="tools">功能</string>

    <!-- about-->
    <string name="about">关于</string>

    <string name="about_version">版本</string>
    <string name="about_github">Github</string>
    <string name="about_name">作者</string>
    <string name="about_email">邮箱</string>
    <string name="about_blog">博客</string>
    <string name="about_des">描述</string>
    <string name="blog_end">-End-</string>
    <string name="about_copyright">Copyright © 2016&#8211;2017 無名</string>

    <string name="author">无名</string>
    <string name="description">本APP用来实践 Material Design 和 MVP 等设计框架</string>
    <string name="github_url">Github地址：https://github.com/whiskeyfei/SimpleNews.io</string>
    <string name="email">whiskeyfei@gmail.com</string>
    <string name="blog">http://doraemonyu.me</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="load_fail">加载数据失败!</string>
    <string name="load_end">已经没有更多的数据了！</string>
    <string name="image_hit">一次只加载20条，查看更多内容请刷新哦。</string>

    <string name="demo">Demo</string>
    <string name="descover">Descover</string>
    <string name="person">Person</string>
    <string name="note">README</string>
    <string name="settings">设置</string>>

    <string name="theme">主题</string>
    <string name="done">确定</string>
    <string name="cancel">取消</string>
    <string name="back_again_exit">再按一次退出</string>
    <string name="today">今天</string>
    <string name="before_day">天前</string>
    <string name="before_hours">小时前</string>

    <string-array name="SettingColorNames">
        <item>青石色</item>
        <item>山茱萸</item>
        <item>绿篱</item>
        <item>樱草黄</item>
        <item>烈焰红</item>
        <item>天堂岛</item>
        <item>甘蓝</item>
        <item>粉蓍草</item>
        <item>尼亚加拉</item>
    </string-array>

    <declare-styleable name="PageBottomTabLayout">
        <attr name="tabPaddingTop" format="dimension"/>
        <attr name="tabPaddingBottom" format="dimension"/>
    </declare-styleable>

    <string name="tab_home">首页</string>
    <string name="tab_rec">推荐</string>
    <string name="tab_blog">博客</string>
    <string name="tab_me">我的</string>

</resources>
