<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_news"
            android:checked="true"
            android:icon="@drawable/ic_assessment_white_24dp"
            android:title="@string/navigation_news"/>
        <item
            android:id="@+id/navigation_item_blog"
            android:checked="true"
            android:icon="@drawable/ic_assessment_white_24dp"
            android:title="@string/navigation_blog"/>
        <item
            android:id="@+id/navigation_item_images"
            android:icon="@drawable/ic_image_white_24dp"
            android:title="@string/navigation_images"/>

    </group>

    <item android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/navigation_item_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>

            <item
                android:id="@+id/navigation_item_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about"/>
            <item
                android:id="@+id/navigation_item_demo"
                android:icon="@drawable/ic_portrait_white_24dp"
                android:title="@string/demo"/>

        </menu>

    </item>
</menu>